ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-12-17 Daniel Andreca
	- LANGUAGES:
		* Updated: Japanese

2008-12-16 Daniel Andreca
	- ENGINE:
		* Fixed #1586: Alias Domains block proftpd restart

2008-12-15 Daniel Andreca
	- ENGINE:
		* Fixed #1587: Catch all after upgrade from RC5 to RC7 not working properly
		* Fixed #1585: Syntax error on line x of ispcp.conf
	- GUI:
		* Reseller statistics are not accessable for administrator

2008-12-14 Daniel Andreca
	- LANGUAGES:
		* Updated: Romanian
		* Updated: Italian

2008-12-13 Daniel Andreca
	- ENGINE:
		* Fixed: ERROR: Incorrect SQL Query -> Unknown collation: 'utf' in ispcp-arpl-msgr

2008-12-12 Benedikt Heintel
	- RELEASE ispCP ω Omega 1.0.0 RC7

2008-12-12 Benedikt Heintel
	- TOOLS:
		* Updated HTMLPurifier to version 3.2.0
		* Updated phpMyAdmin to version 3.1.1
	- LANGUAGES:
		* Added: Chinese (Hongkong)

2008-12-11 Daniel Andreca
	- GUI:
		* Ticket #1580: Modifying domain's traffic limit removes subdomain in ispcp.conf
	- DOCS:
		* Ticket #1581: OpenSUSE is now using zypper

2008-12-09 Daniel Andreca
	- GUI:
		* SQL passwords were not encrypted on critical update
		* Login problem is too many wrong password (big thanks Kika)

2008-12-08 Daniel Andreca
	- GUI:
		* ISPCP debugger now show status for alias subdomains
	- TOOLS:
		* Small fix for phpMyAdmin theme

2008-12-07 Jochen Manz
	- LANGUAGES:
		* small corrections in german language file

2008-12-07 Daniel Andreca
	- ENGINE:
		* Update script ready for RC7
	- CONFIGS:
		* Configs ready for RC7
	- DOCS:
		* Install / update instructions ready for RC7

2008-12-06 Benedikt Heintel
	- LANGUAGES:
		* Updated: German

2008-12-05 Daniel Andreca
	- ENGINE:
		* Fixed #1516: Named, at least for gentoo, is only binding to localhost by default
		* Fixed #1460: /etc/cron.d/ispcp replacements not happening in gentoo install
	- DISTS:
		* Update Gentoo install documentation
	- CONFIGS:
		* Update Gentoo fcgid setting
		* Update Gentoo ispcp.conf setting